# sakhi-llm

./: .gitignore  Makefile  Readme.md  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: ci.yml  publish.yml
sakhi/: __init__.py
sakhi/cli/: inference.py  main.py  train.py
sakhi/configs/: sakhi-telugu-681M-instruct-0625.yaml  sakhi_telugu__681M.yaml
sakhi/data/custom_dataset/instruction_tune/: custom_dataset.py
sakhi/data/tokenizer/: tokenize_dataset.py
sakhi/model/: model.py
sakhi/model/components/: decoder.py  mha_rope.py
sakhi/model/playground/: test_hyperparameters.py
sakhi/pipelines/inference/: inference.py
sakhi/pipelines/train/: __init__.py  instruction_tune.py  pretraining.py
sakhi/pipelines/utils/: general_utils.py
sakhilabs/cli/: inference.py  main.py  train.py
sakhilabs/cli/model/: inference_model.py  train_model.py
sakhilabs/cli/tokenizer/: test_tokenizer.py  train_tokenizer.py
sakhilabs/configs/: sakhi-telugu-1B-pretrained-0725.yaml  sakhi-telugu-681M-instruct-0625.yaml
sakhilabs/data/loaders/: instruction_tune.py  pretrain.py
sakhilabs/data/tokenizer/: test_tokenizer.py  train_tokenzier.py
sakhilabs/pipelines/inference/: inference.py
sakhilabs/pipelines/tokenizer/: test_tokenizer.py  tokenize_dataset.py  train_tokenzier.py
sakhilabs/pipelines/tokenizer/train/: tokenizer_SentencePiece.py
sakhilabs/pipelines/train/: __init__.py  instruction_tune.py  pretraining.py  pretraining_ddp.py
sakhilabs/pipelines/utils/: constants.py  cook_model.py  general_utils.py
(+3 files in other folders)
